# context-1-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
engine/: pyproject.toml
engine/src/context1_engine/: deepinfra.py  ingest.py  server.py  store.py
harness/: pyproject.toml
harness/src/context1_harness/: agent.py  budget.py  cli.py  context.py  mcp_client.py  prompts.py
tests/: test_engine.py  test_harness.py
