[project]
name = "context1-engine"
version = "0.1.0"
description = "MCP embeddings engine: hybrid search over a Chroma corpus for the Context-1 harness"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "chromadb>=1.0",
    "rank-bm25>=0.2",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
context1-engine = "context1_engine.server:main"
context1-ingest = "context1_engine.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
